Archive2/4a/3d8663d4f92ccb/output
main.cpp: In instantiation of 'int f<Return, Args>::test(Args&& ...) [with Return = void; Args = {int}]':
main.cpp:17:27:   required from here
main.cpp:7:16: error: variable or field 't' declared void
         Return t = func(std::forward<Args>(args)...);
                ^
